--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ classifiers=[
   "Intended Audience :: Developers",
   "Intended Audience :: System Administrators",
   "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python",
   "Typing :: Typed",
   "Environment :: Web Environment",
@@ -31,7 +33,7 @@ classifiers=[
   "License :: OSI Approved :: BSD License",
 ]
 description-file = "README.md"
-requires-python = ">=3.9.7"
+requires-python = ">=3.8.0"
 
 [tool.pytest.ini_options]
 addopts = [
