remove dist and build folders with gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ apps/troc/migrations/
 apps/troc/migrations/__init__.py
 
 # Distribution / packaging
+build/
+sdist/
+dist/
 .Python
 env/
 .venv/
