--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [build-system]
 requires = [
-    'setuptools >= 47',
-    'toml == 0.10.2',
+    'setuptools==67.5.1',
+    'wheel==0.38.4',
+    'toml>=0.10.2',
     'flit==3.5.1'
 ]
 
@@ -20,6 +21,7 @@ classifiers=[
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
   "Programming Language :: Python",
   "Typing :: Typed",
   "Environment :: Web Environment",
@@ -32,7 +34,7 @@ classifiers=[
   "License :: OSI Approved :: BSD License",
 ]
 description-file = "README.md"
-requires-python = ">=3.8.0"
+requires-python = ">=3.9.16"
 
 [tool.pytest.ini_options]
 addopts = [
