--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,7 @@
 [build-system]
 requires = [
     'setuptools==67.5.1',
-    'wheel==0.38.4',
-    'toml>=0.10.2',
-    'flit==3.5.1'
+    'wheel==0.38.4'
 ]
 
 build-backend = "setuptools.build_meta"
