--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,12 @@ classifiers=[
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Programming Language :: Python",
   "Typing :: Typed",
   "Environment :: Web Environment",
   "Framework :: AsyncIO",
+  "Framework :: AIOHTTP",
   "Topic :: Software Development :: Libraries :: Application Frameworks",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Software Development :: Build Tools",
