--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
 
@@ -28,15 +28,8 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         uses: RalfG/python-wheels-manylinux-build@v0.7.1-manylinux2014_x86_64
         with:
-          python-versions: 'cp39-cp39 cp310-cp310 cp311-cp311 cp312-cp312'
+          python-versions: 'cp310-cp310 cp311-cp311 cp312-cp312 cp313-cp313'
           build-requirements: 'cython numpy'
-
-      - name: Build wheels on Windows
-        if: matrix.os == 'windows-latest'
-        run: |
-          pip install cibuildwheel
-          cibuildwheel --output-dir dist
-          # You may need to adjust the above command based on your package's specific requirements
 
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
@@ -67,10 +60,6 @@ jobs:
             echo "Found manylinux wheels."
             echo "HAS_MANYLINUX_WHEELS=true" >> $GITHUB_ENV
           fi
-          if ls dist/*-win_*.whl 1> /dev/null 2>&1; then
-            echo "Found Windows wheels."
-            echo "HAS_WINDOWS_WHEELS=true" >> $GITHUB_ENV
-          fi
 
       - name: List files in dist
         run: ls -l dist
@@ -89,10 +78,3 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.NAVIGATOR_SESSION_PYPI_API_TOKEN }}
         run: twine upload dist/*-manylinux*.whl
-
-      - name: Publish Windows wheels to Production PyPI
-        if: env.HAS_WINDOWS_WHEELS == 'true'
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.NAVIGATOR_SESSION_PYPI_API_TOKEN }}
-        run: twine upload dist/*-win_*.whl
