--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Python package build and publish
+name: Python package build and publish with uv
 
 on:
   release:
@@ -22,14 +22,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install twine
+          pip install cibuildwheel twine
 
       - name: Build wheels on Ubuntu
         if: matrix.os == 'ubuntu-latest'
-        uses: RalfG/python-wheels-manylinux-build@v0.7.1-manylinux2014_x86_64
-        with:
-          python-versions: 'cp310-cp310 cp311-cp311 cp312-cp312 cp313-cp313'
-          build-requirements: 'cython numpy'
+        env:
+          CIBW_ARCHS: x86_64
+          CIBW_BUILD: "cp3{10,11,12,13}-*"
+          CIBW_SKIP: "*-musllinux_*"
+        run: |
+          cibuildwheel --platform linux --output-dir dist
 
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
@@ -40,42 +42,32 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    environment:
+      name: pypi
+      url: https://pypi.org/p/navigator-session
+    permissions:
+      id-token: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
 
       - name: Download all artifacts
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4
         with:
-          path: dist
+          path: dist-artifacts
 
-      - name: Move wheel files to 'dist' directory
+      - name: Move wheel files to dist directory
         run: |
-          find dist -name '*.whl' -exec mv {} dist \;
-
-      - name: Check for wheel types
-        id: check_wheels
-        run: |
-          echo "Checking for wheel types..."
-          if ls dist/*.whl 1> /dev/null 2>&1; then
-            echo "Found wheel files."
-            echo "HAS_WHEELS=true" >> $GITHUB_ENV
-          fi
-
+          mkdir -p dist
+          find dist-artifacts -name '*.whl' -exec mv {} dist/ \;
 
       - name: List files in dist
         run: ls -l dist
 
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.x'
-
-      - name: Install twine
-        run: pip install twine
-
-      - name: Publish manylinux wheels to Production PyPI
-        if: env.HAS_WHEELS == 'true'
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.NAVIGATOR_SESSION_PYPI_API_TOKEN }}
-        run: twine upload dist/*.whl
+      - name: Publish to PyPI
+        run: |
+          uv tool install twine
+          uv tool run twine upload dist/*-manylinux*.whl --username __token__ --password ${{ secrets.NAVIGATOR_SESSION_PYPI_API_TOKEN }}
