--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,38 +6,23 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          version: "latest"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install cibuildwheel twine
+      - name: Build package
+        run: uv build
 
-      - name: Build wheels on Ubuntu
-        if: matrix.os == 'ubuntu-latest'
-        env:
-          CIBW_ARCHS: x86_64
-          CIBW_BUILD: "cp3{10,11,12,13}-*"
-          CIBW_SKIP: "*-musllinux_*"
-        run: |
-          cibuildwheel --platform linux --output-dir dist
-
-      - name: Upload wheel artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
-          path: dist/*.whl
+          name: packages
+          path: dist/*
 
   deploy:
     needs: build
@@ -57,12 +42,8 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: dist-artifacts
-
-      - name: Move wheel files to dist directory
-        run: |
-          mkdir -p dist
-          find dist-artifacts -name '*.whl' -exec mv {} dist/ \;
+          name: packages
+          path: dist
 
       - name: List files in dist
         run: ls -l dist
@@ -70,4 +51,4 @@ jobs:
       - name: Publish to PyPI
         run: |
           uv tool install twine
-          uv tool run twine upload dist/*-manylinux*.whl --username __token__ --password ${{ secrets.NAVIGATOR_SESSION_PYPI_API_TOKEN }}
+          uv tool run twine upload dist/* --username __token__ --password ${{ secrets.NAVIGATOR_SESSION_PYPI_API_TOKEN }}
